feat: 전체 기물의 상태를 보는 체스판 기능 구현
Board에서 초기 체스 판 상태를 구현하기 보다는 Rank(행)을 사용해서 더 잘게 쪼개서 메서드를 분리함. 그리고, Pp같은 체스의 심볼이 뷰 영역이 아닌 piece마다 갖고있도록 함.